# csv-slam

./: .gitignore  CMakeLists.txt  README.md  config.lua  config_2d+++rotation+++translation.lua  config_2d.lua  config_2d_high_rotation_weight.lua  config_2d_high_translation_weight.lua  config_2d_low_rotation_weight.lua  config_2d_low_translation_weight.lua  config_3d+++rotation+++translation.lua  config_3d.lua  config_3d_high_rotation_translation_weight.lua  config_3d_high_rotation_weight.lua  config_3d_high_translation_weight.lua  config_3d_low_rotation_translation_weight.lua  config_3d_low_rotation_weight.lua  config_3d_low_translation_weight.lua  config_3d_really_high_rotation_translation_weight.lua  config_3d_unweighted.lua  csv_slam.py  options.lua  options_2d.lua  options_3d.lua  pose_graph.lua  trajectory_builder.lua  trajectory_builder_2d.lua  trajectory_builder_3d.lua
output/: visualize.m
src/: cartographer_state.cpp  cartographer_state.h  csv_slam.cpp  csv_writer.cpp  csv_writer.h  hit_packet_reader.cpp  hit_packet_reader.h  imu_reader.cpp  imu_reader.h  odometry_reader.cpp  odometry_reader.h  sensor_callback.cpp  sensor_callback.h  sensor_callback_queue.cpp  sensor_callback_queue.h  util.cpp  util.h  velodyne_reader.cpp  velodyne_reader.h
